# opengl_graphics

./: .gitattributes  CMakeLists.txt  CMakePresets.json  basics.cpp  lights.cpp  main.cpp  vcpkg.json
app/: CMakeLists.txt  lights.cpp  main.cpp
include/: attr_array.h  data.h  frame_buffer.h  json.hpp  mesh.h  model.h  shader.h  shader_utils.h  tex_manager.h  vertices.h
res/: tex_names.json
shaders/: basics.vs  fs.glsl  lights.fs  lights.gs  lights.vs  main.fs  main.vs  screen.fs  screen.vs  skybox.fs  skybox.vs  vs.glsl
src/: CMakeLists.txt  attr_array.cpp  frame_buffer.cpp  mesh.cpp  model.cpp  shader.cpp  tex_manager.cpp
